--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.miCaja{
+  background-color: rgb(196, 66, 73);
+  height: 8em;
+  width: 15em;
+  border: solid black;
+}
+
+.fondoVerde{
+  background-color: green;
+  color: white;
+}
